CCD-4600: Upgrade to Java 17 and App insights v3 (#664)
* CCD-4600: Upgrade to Java 17 and App insights v3

* Bumping chart version/ fixing aliases

* CCD-4600: Update Dockerfile

* CCD-4600: Update serenity and dockerfile

* CCD-4600: Bump sonarqube and use openjdk:17-jdk-slim

* CCD-4600: Update openjdk version in acb file

* CCD-4600: Update smoke test task

* CCD-4600: Add jvm args to resolve smoke test issue

* CCD-4600: Add reflect to jvm args

* CCD-4600: Move jvm args into smoke task

* CCD-4600: Try passing jvm args another way

* CCD-4600: Pass jvms another way

* CCD-4600: Populate all test jvm args

* CCD-4600: Alter jvm args

* Update values.preview.template.yaml

* Update Jenkinsfile_CNP

* Update values.preview.template.yaml

Reverted to ccd-data-store-api-pr-1360-java

* Update Jenkinsfile_CNP

reverted dev definition and data store pr branches

---------

Co-authored-by: Tom Elliott <tomelliott@Toms-MacBook-Pro.local>
Co-authored-by: hmcts-jenkins-a-to-c <62422075+hmcts-jenkins-a-to-c[bot]@users.noreply.github.com>
Co-authored-by: RebeccaBaker <38425793+RebeccaBaker@users.noreply.github.com>
Co-authored-by: dinesh1patel <74076102+dinesh1patel@users.noreply.github.com>