@@ -1,12 +1,3 @@
-buildscript {
-  repositories {
-  }
-  configurations.maybeCreate("pitest")
-  dependencies {
-    classpath("net.serenity-bdd:serenity-gradle-plugin:2.2.8")
-   }
-}
-
 plugins {
   id 'application'
   id 'checkstyle'
@@ -17,9 +8,10 @@ plugins {
   id 'org.springframework.boot' version '2.7.11'
   id 'uk.gov.hmcts.java' version '0.12.40'
   id 'com.github.ben-manes.versions' version '0.36.0'
-  id 'org.sonarqube' version '3.0'
+  id 'org.sonarqube' version '4.2.0.3129'
   id 'com.github.spacialcircumstances.gradle-cucumber-reporting' version '0.1.23'
   id 'au.com.dius.pact' version '4.1.7'
+  id 'net.serenity-bdd.serenity-gradle-plugin' version '3.0.0'
 }
 
 apply plugin: 'java'
@@ -32,7 +24,7 @@ def versions = [
   junit              : '5.6.2',
   lombok             : '1.18.20',
   reformLogging      : '5.1.9',
-  serenity           : '2.1.0',
+  serenity           : '3.7.0',
   springFramework    : '5.3.27',
   springBoot         : springBoot.class.package.implementationVersion,
   springCloud        : '3.1.3',
@@ -57,9 +49,10 @@ ext['snakeyaml.version'] = '1.32'
 
 group = 'uk.gov.hmcts.reform.ccd.documentam'
 
-allprojects {
-  sourceCompatibility = '11'
-  targetCompatibility = '11'
+java {
+  toolchain {
+    languageVersion = JavaLanguageVersion.of(17)
+  }
 }
 
 jacocoTestCoverageVerification {
@@ -118,7 +111,6 @@ task functional(type: Test, description: 'Runs the functional tests.', group: 'V
   classpath = sourceSets.functionalTest.runtimeClasspath
 
   doFirst {
-    generateCucumberReports.enabled = true
     javaexec {
       main = "uk.gov.hmcts.ccd.documentam.befta.CaseDocumentAmBeftaMain"
       classpath += configurations.cucumberRuntime + sourceSets.functionalTest.runtimeClasspath + sourceSets.main.output + sourceSets.test.output
@@ -126,6 +118,7 @@ task functional(type: Test, description: 'Runs the functional tests.', group: 'V
               '--plugin', "junit:${buildDir}/test-results/functional/cucumber.xml",
               '--tags', 'not @Ignore',
               '--glue', 'uk.gov.hmcts.befta.player', 'src/functionalTest/resources/features/']
+      jvmArgs = [ '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED' ]
     }
   }
 
@@ -159,18 +152,19 @@ task smoke(type: Test, description: 'Runs the smoke tests.', group: 'Verificatio
   }
 
   doLast {
-    generateCucumberReports.enabled = true
     javaexec {
-      main = "uk.gov.hmcts.ccd.documentam.befta.CaseDocumentAmBeftaMain"
+      mainClass = "uk.gov.hmcts.ccd.documentam.befta.CaseDocumentAmBeftaMain"
       classpath += configurations.cucumberRuntime + sourceSets.functionalTest.runtimeClasspath + sourceSets.main.output + sourceSets.test.output
       args = ['--plugin', "json:${rootDir}/target/cucumber.json",
               '--plugin', "junit:${buildDir}/test-results/smoke/cucumber.xml",
               '--tags', '@Smoke',
               '--glue', 'uk.gov.hmcts.befta.player', 'src/functionalTest/resources/features']
+      jvmArgs = [ '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED' ]
     }
   }
 
   finalizedBy {
+    generateCucumberReports.enabled = true
     generateCucumberReports {
       doLast{
         new File("${rootDir}/BEFTA Report for Smoke Tests").mkdirs()
@@ -185,8 +179,8 @@ task smoke(type: Test, description: 'Runs the smoke tests.', group: 'Verificatio
 jacocoTestReport {
   executionData(test, integration)
   reports {
-    xml.enabled = true
-    csv.enabled = false
+    xml.required = true
+    csv.required = false
     xml.destination file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml")
   }
 }
@@ -194,7 +188,7 @@ jacocoTestReport {
 project.tasks['sonarqube'].dependsOn jacocoTestReport
 
 jacoco {
-  toolVersion = "0.8.2"
+  toolVersion = "0.8.8"
 }
 
 pitest {
@@ -278,7 +272,6 @@ dependencies {
   integrationTestAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
 
   implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: versions.reformLogging
-  implementation group: 'com.github.hmcts.java-logging', name: 'logging-appinsights', version: versions.reformLogging
   implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: versions.serviceAuthVersion
   implementation group: 'com.github.hmcts', name: 'idam-java-client', version: '1.5.5'
 
@@ -313,6 +306,8 @@ dependencies {
   // CVE-2021-28170
   implementation group: 'org.glassfish', name: 'jakarta.el', version: '4.0.1'
 
+  implementation group: 'com.microsoft.azure', name: 'applicationinsights-spring-boot-starter', version: '2.6.4'
+
   testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: versions.junit
   testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: versions.junit
   testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: versions.junit
@@ -336,11 +331,11 @@ dependencies {
   testImplementation group: 'io.rest-assured', name: 'xml-path', version: versions.restAssured
   testCompile 'com.github.hmcts:fortify-client:1.3.0:all'
 
-  integrationTestCompile sourceSets.main.runtimeClasspath
-  integrationTestCompile sourceSets.test.runtimeClasspath
+  integrationTestImplementation sourceSets.main.runtimeClasspath
+  integrationTestImplementation sourceSets.test.runtimeClasspath
 
-  functionalTestCompile sourceSets.main.runtimeClasspath
-  functionalTestCompile sourceSets.test.runtimeClasspath
+  functionalTestImplementation sourceSets.main.runtimeClasspath
+  functionalTestImplementation sourceSets.test.runtimeClasspath
 
   contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'junit5', version: versions.pact_version
   contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'java8', version: versions.pact_version
@@ -390,7 +385,7 @@ tasks.withType(Test) {
 }
 
 task fortifyScan(type: JavaExec)  {
-  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  mainClass = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
   classpath += sourceSets.test.runtimeClasspath
   jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
   // The line below prevents the build from failing if the Fortify scan detects issues
@@ -404,7 +399,7 @@ test {
 mainClassName = 'uk.gov.hmcts.reform.ccd.documentam.Application'
 
 bootJar {
-  archiveName 'ccd-case-document-am-api.jar'
+  archiveFileName = 'ccd-case-document-am-api.jar'
   manifest {
     attributes('Implementation-Version': project.version.toString())
   }
@@ -487,3 +482,12 @@ runProviderPactVerification.finalizedBy pactVerify
 def getCheckedOutGitCommitHash() {
   'git rev-parse --verify --short HEAD'.execute().text.trim()
 }
+
+rootProject.tasks.named("processIntegrationTestResources") {
+  duplicatesStrategy = 'include'
+}
+
+rootProject.tasks.named("processFunctionalTestResources") {
+  duplicatesStrategy = 'include'
+}
+
